--- a/template.html
+++ b/template.html
@@ -12,8 +12,8 @@
 
 	<nav>
 		<ul id="navbar">
-			<li><a href="/">Home</a></li>
-			<li><a href="about.php">About</a></li>
+			<li><a href="home">Home</a></li>
+			<li><a href="about">About</a></li>
 		</ul>
 	</nav>
 
