--- a/template.html
+++ b/template.html
@@ -3,6 +3,7 @@
 <head>
 	<title>{{title}}-XXX</title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+	{{javascript}}
 </head>
 
 <body>
@@ -12,8 +13,8 @@
 
 	<nav>
 		<ul id="navbar">
-			<li><a href="home">Home</a></li>
-			<li><a href="about">About</a></li>
+			<li><a href="/">Home</a></li>
+			<li><a href="index.php?page=about">About</a></li>
 		</ul>
 	</nav>
 
