Adds author field to create_entry.html

--- a/create_entry.html
+++ b/create_entry.html
@@ -14,9 +14,13 @@
 	<!--Image preview-->
 	<img src="#" alt="No preview available"><br/>
 	
+	<label>Author:
+	<input type="text" name="author" size="30" placeholder="Your name here">*required
+	</label><br/>
+
 	<!--Title field-->
 	<label>Title:
-	<input type="text" name="title" size="20">*required
+	<input type="text" name="title" size="30" placeholder="Enter a title">*required
 	</label><br/>
 
 	<!--Story field-->
