--- a/html/404.html
+++ b/html/404.html
@@ -1,2 +1,4 @@
+<!--Contents for 404 Page not found error.
+    Free to edit to make it presentable as long as it gets the message across-->
 <h2>404 - Page Not Found</h2>
 <p>The page that you have requested is not available or does not exist.</p>
