--- a/html/template.html
+++ b/html/template.html
@@ -15,6 +15,7 @@
 		<ul id="navbar">
 			<li><a href="/">Home</a></li>
 			<li><a href="index.php?page=about">About</a></li>
+			{{usrmenu}}
 		</ul>
 	</nav>
 
