Adds password reset form

--- a/html/login.html
+++ b/html/login.html
@@ -10,7 +10,7 @@
 
 	<!--Fill the href section with the appropriate request
 	    to send to script-->
-	<a href="index.php?action=reset_passwd">Forgot your password?</a><br/>
+	<a href="index.php?page=reset_passwd">Forgot your password?</a><br/>
 
 	<input type="submit" name="submit" value="Login">
 </form>
