Debugs signup section in users.php

--- a/html/signup.html
+++ b/html/signup.html
@@ -1,6 +1,10 @@
 <!--Signup form-->
 {{error}}
 <form name="signup" action="users.php?action=signup" method="POST">
+	<label>Name:
+	<input type="text" name="name" size="20" maxlength="20">
+	</label><br/>
+
 	<label>Email:
 	<input type="text" name="email" size="30">
 	</label><br/>
