Adds code to prevent users from typing in URLs directly

--- a/html/loggedinmenu.html
+++ b/html/loggedinmenu.html
@@ -1,3 +1,4 @@
+<!--Menu links for logged in users only-->
 <li><a href="index.php?page=create_entry">Create Entry</a></li>
 <li><a href="#">Change Password</a><li>
 <li><a href="users.php?action=logout">Logout</a></li>
