--- a/html/about.html
+++ b/html/about.html
@@ -1,3 +1,4 @@
+<!--Contents of About page-->
 <h2>About Us</h2>
 <p>This site is created by 2 NUS students as part of their
 Orbital project summer 2014. The aim is to help users easily
