--- a/html/home.html
+++ b/html/home.html
@@ -1,3 +1,4 @@
+<!--Contents for home page for typical user-->
 <p>Do you have photos of any significant life events that you
 do not wish to forget? Or do you want to share these life events
 with your friends? Then you have come to the right place! XXX
