--- a/html/loggedoutmenu.html
+++ b/html/loggedoutmenu.html
@@ -1,2 +1,3 @@
+<!--Menu links for logged out users-->
 <li><a href="index.php?page=signup">Sign Up</a></li>
 <li><a href="index.php?page=login">Login</a></li>
