Adds code to display error messages for forms

--- a/html/change_passwd.html
+++ b/html/change_passwd.html
@@ -1,4 +1,5 @@
 <!--Form to change password-->
+{{message}}
 <form name="change_passwd" action="users.php?action=changepasswd" method="POST">
 <label>Current Password:
 <input type="password" name="old_passwd" size="10" maxlength="10">
