--- a/html/login.html
+++ b/html/login.html
@@ -1,5 +1,5 @@
 <!--User login form-->
-{{error}}
+{{message}}
 <form name="login_form" action="users.php?action=login" method="POST">
 	<label>Email: 
 	<input type="text" name="email" size="30">
