--- a/html/signup.html
+++ b/html/signup.html
@@ -1,5 +1,5 @@
 <!--Signup form-->
-{{error}}
+{{message}}
 <form name="signup" action="users.php?action=signup" method="POST">
 	<label>Name:
 	<input type="text" name="name" size="20" maxlength="20">
