Touches up login.html

--- a/html/login.html
+++ b/html/login.html
@@ -6,7 +6,7 @@
 	</label><br/>
 
 	<label>Password: 
-	<input type="password" name="passwd" size="10">
+	<input type="password" name="passwd" size="10" maxlength="10">
 	</label><br/>
 
 	<!--Fill the href section with the appropriate request
