Adds code to automatically fill author field for logged in users

--- a/html/create_entry.html
+++ b/html/create_entry.html
@@ -15,7 +15,7 @@
 	<img src="#" alt="No preview available"><br/>
 	
 	<label>Author:
-	<input type="text" name="author" size="30" placeholder="Your name here">*required
+	{{author}}
 	</label><br/>
 
 	<!--Title field-->
