Adds code to save file to server only if user is logged in

--- a/html/create_entry.html
+++ b/html/create_entry.html
@@ -28,6 +28,6 @@
 	<textarea name="story" rows="20" cols="80" form="entry" placeholder="Write your story here..."></textarea>*required<br/>
 
 	<!--Submit button-->
-	<input type="submit" name="submit" value="submit">
+	<input type="submit" name="submit" value="Submit">
 	</label>
 </form>
