COmpletes javascript signup form validation

--- a/html/create_entry.html
+++ b/html/create_entry.html
@@ -9,7 +9,7 @@
 	<!--readURL() function to be implemented. Complicated.-->
 	<input type="file" name="img" id="file"
 	accept="image/gif, image/jpeg, image/png"
-	onchange="">*required<br/>
+	onchange="validate_file()">*required<br/>
 
 	<!--Handle the preview issue at a later stage-->
 	<!--Image preview-->
