--- a/html/signup.html
+++ b/html/signup.html
@@ -3,19 +3,19 @@
 <form name="signup" action="users.php?action=signup" method="POST"
 onsubmit="return validate_signup();">
 	<label>Name:
-	<input type="text" name="name" size="20" maxlength="20">
+	<input type="text" name="name" size="20" maxlength="20">*required
 	</label><br/>
 
 	<label>Email:
-	<input type="text" name="email" size="30">
+	<input type="text" name="email" size="30">*required
 	</label><br/>
 
 	<label>Password:
-	<input type="password" name="passwd" size="10" maxlength="10">
+	<input type="password" name="passwd" size="10" maxlength="10">*required
 	</label><br/>
 
 	<label>Re-type password:
-	<input type="password" name="re-passwd" size="10" maxlength="10">
+	<input type="password" name="re-passwd" size="10" maxlength="10">*required
 	</label><br/>
 
 	<input type="submit" name="submit" value="Sign Up">
