--- a/html/loggedoutmenu.html
+++ b/html/loggedoutmenu.html
@@ -1,3 +1,3 @@
 <!--Menu links for logged out users-->
-<li><a href="https://localhost/index.php?page=signup">Sign Up</a></li>
-<li><a href="https://localhost/index.php?page=login">Login</a></li>
+<li><a href="/signup">Sign Up</a></li>
+<li><a href="/login">Login</a></li>
