--- a/html/signup.html
+++ b/html/signup.html
@@ -11,11 +11,11 @@ onsubmit="return validate_signup();">
 	</label><br/>
 
 	<label>Password:
-	<input type="password" name="passwd" size="10" maxlength="10">*required
+	<input type="password" name="passwd" size="10" maxlength="10">*required(Strictly 10 alphanumberic characters)
 	</label><br/>
 
 	<label>Re-type password:
-	<input type="password" name="re-passwd" size="10" maxlength="10">*required
+	<input type="password" name="re-passwd" size="10" maxlength="10">*required(Must match the previously entered password)
 	</label><br/>
 
 	<input type="submit" name="submit" value="Sign Up">
