--- a/html/signedup.html
+++ b/html/signedup.html
@@ -1,2 +1,2 @@
 <!--Message for users who completed the signup process-->
-<p>Thank you for signing up. Please proceed to login.</p>
+<p>Thank you for signing up. An email with the activation code has been sent to your email. Please activate your account before logging in.</p>
