--- a/html/reset_passwd.html
+++ b/html/reset_passwd.html
@@ -1,6 +1,7 @@
 <!--Form for users wh forgot their passwords-->
 <p>An email with the new password will be sent to the email address
 provided in the form below.</p>
+{{message}}
 <form name="reset_passwd" action="" method="POST">
 	<label>Email:
 	<input type="text" name="email" size="30">
