Adds code to handle password reset requests in users.php

--- a/html/reset_passwd.html
+++ b/html/reset_passwd.html
@@ -2,7 +2,7 @@
 <p>An email with the new password will be sent to the email address
 provided in the form below.</p>
 {{message}}
-<form name="reset_passwd" action="" method="POST">
+<form name="reset_passwd" action="users.php?action=reset_passwd" method="POST">
 	<label>Email:
 	<input type="text" name="email" size="30">
 	</label><br/>
