Implements account activation by admin user

--- a/html/users_table.html
+++ b/html/users_table.html
@@ -1,7 +1,7 @@
 <!--Table of user info-->
 <table border="1">
 	<tr>
-		<th>ID</th><th>Username</th><th>Email</th><th>Action</th>
+		<th>ID</th><th>Username</th><th>Email</th><th colspan="4">Action</th>
 	</tr>
 {{list}}
 </table>
