--- a/html/create_entry.html
+++ b/html/create_entry.html
@@ -2,7 +2,7 @@
 <!--Lesson learnt: Must include enctype="multipart/form-data in <form> to
     allow file to be submitted as file"-->
 {{message}}
-<form name="new_entry" action="upload_handler.php" method="post" id="entry" onsubmit="return validate();" enctype="multipart/form-data">
+<form name="new_entry" action="https://localhost/upload_handler.php" method="post" id="entry" onsubmit="return validate();" enctype="multipart/form-data">
 
 	<!--Image file upload field-->
 	<label for="file">Image File:</label>
