--- a/html/reset_passwd.html
+++ b/html/reset_passwd.html
@@ -3,6 +3,9 @@
 provided in the form below.</p>
 {{message}}
 <form name="reset_passwd" action="users.php?action=reset_passwd" method="POST">
+	<label>Username:
+	<input type="text" name="name" size="30">
+	</label><br/>
 	<label>Email:
 	<input type="text" name="email" size="30">
 	</label><br/>
