Adds site title to template.html

--- a/html/template.html
+++ b/html/template.html
@@ -2,14 +2,14 @@
 <!--Template HTML code for ALL pages-->
 <html>
 <head>
-	<title>{{title}}-XXX</title>
+	<title>{{title}}-Relive That Moment</title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	{{javascript}}
 </head>
 
 <body>
 	<div id="header">
-		<h1>Site Title</h1>
+		<h1>Relive That Moment</h1>
 	</div>
 
 	<nav>
@@ -26,7 +26,7 @@
 	</div>
 
 	<div id="footer">
-		Created by: XXX and XXX on XX July 2014
+		Created by: Qua Zi Xian and Tang Yulong on XX July 2014
 	</div>
 </body>
 </html>
