Touches up some graphical details and credits

--- a/html/template.html
+++ b/html/template.html
@@ -26,7 +26,8 @@
 	</div>
 
 	<div id="footer">
-		Created by: Qua Zi Xian and Tang Yulong on XX July 2014
+		Created by: Qua Zi Xian and Tang Yulong on XX July 2014<br/>
+		Hosted on: <a href="https://www.heroku.com">Heroku</a>
 	</div>
 </body>
 </html>
