--- a/html/home.html
+++ b/html/home.html
@@ -1,9 +1,12 @@
 <!--Contents for home page for typical user-->
 <p>Do you have photos of any significant life events that you
 do not wish to forget? Or do you want to share these life events
-with your friends? Then you have come to the right place! XXX
+with your friends? Then you have come to the right place! Relive That Moment
 will help you get it done within a few minutes.
 </p>
+
+<p>Want to maintain a collection of your memories in the cloud? Sign up for an
+account to be able to do so.</p>
 
 <h2>New to this site?</h2>
 <!--Insert image button link to guided process-->
