--- a/html/create_entry.html
+++ b/html/create_entry.html
@@ -1,6 +1,7 @@
 <!--Form to gather required information for an entry-->
 <!--Lesson learnt: Must include enctype="multipart/form-data in <form> to
     allow file to be submitted as file"-->
+<p>Please log in if you want your entry to be part of your online collection.</p>
 {{message}}
 <form name="new_entry" action="upload_handler.php" method="post" id="entry" onsubmit="return validate();" enctype="multipart/form-data">
 
