Touches up signed up page to be like master branch

--- a/html/signedup.html
+++ b/html/signedup.html
@@ -1,2 +1,3 @@
 <!--Message for users who completed the signup process-->
-<p>Thank you for signing up. An email with the activation code has been sent to your email. Please activate your account before logging in.</p>
+<p>Thank you for signing up. Use the following URL to activate your account.</p>
+{{message}}
