--- a/html/signedup.html
+++ b/html/signedup.html
@@ -1,3 +1,2 @@
 <!--Message for users who completed the signup process-->
-<p>Thank you for signing up. Use the following URL to activate your account.</p>
-{{message}}
+<p>Thank you for signing up. Please check your email for the link to activate your account.</p>
