Touches up signed up page

--- a/html/signedup.html
+++ b/html/signedup.html
@@ -1,3 +1,2 @@
 <!--Message for users who completed the signup process-->
-<p>Thank you for signing up. Please enter the following URL to activate your account.</p>
-{{message}}
+<p>Thank you for signing up. Please check your email for the activation link. If you do not receive an email, please contact the site administrator regarding your account.</p>
