--- a/html/template.html
+++ b/html/template.html
@@ -4,7 +4,7 @@
 <head>
 	<title>{{title}}-Relive That Moment</title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-	{{javascript}}
+	<script type="text/javascript" src = javascripts/jscript.js></script>
 </head>
 
 <body>
