Begins revamp of request handling

--- a/html/template.html
+++ b/html/template.html
@@ -15,7 +15,7 @@
 	<nav>
 		<ul id="navbar">
 			<li><a href="/">Home</a></li>
-			<li><a href="index.php?page=about">About</a></li>
+			<li><a href="/about">About</a></li>
 			{{usrmenu}}
 		</ul>
 	</nav>
