--- a/html/reset_password.html
+++ b/html/reset_password.html
@@ -1,8 +1,8 @@
 <!--Form for users wh forgot their passwords-->
 <p>An email with the new password will be sent to the email address
 provided in the form below.</p>
-{{message}}
-<form name="reset_passwd" action="users.php?action=reset_passwd" method="POST">
+<div class="error" id="error"><div>
+<form name="reset_password" action="users.php?action=reset_password" method="POST">
 	<label>Username:
 	<input type="text" name="name" size="30">
 	</label><br/>
