--- a/html/login.html
+++ b/html/login.html
@@ -80,8 +80,8 @@
     });
   }
 </script>
-<form name="login_form" action="users.php?action=login" method="POST"
-onsubmit="return validate_login()">
+<form name="login_form" action="users/login" method="POST"
+onsubmit="return validate_login(event);">
 	<label>Email: 
 	<input type="text" name="email" size="30">*required
 	</label><br/>
