--- a/html/change_passwd.html
+++ b/html/change_passwd.html
@@ -1,5 +1,5 @@
 <!--Form to change password-->
-{{message}}
+<div class="message" id="message"></div>
 <form name="change_passwd" action="users.php?action=changepasswd" method="POST">
 <label>Current Password:
 <input type="password" name="old_passwd" size="10" maxlength="10">
