--- a/html/login.html
+++ b/html/login.html
@@ -80,7 +80,7 @@
     });
   }
 </script>
-<form name="login_form" action="users/login" method="POST"
+<form id="login_form" action="users/login" method="POST"
 onsubmit="return validate_login(event);">
 	<label>Email: 
 	<input type="text" name="email" size="30">*required
@@ -94,7 +94,7 @@ onsubmit="return validate_login(event);">
 	    to send to script-->
 	<a href="/reset_password">Forgot your password?</a><br/>
 
-	<input type="submit" name="submit" value="Login">
+	<input type="submit" name="submit_button" value="Login">
 	
 	<!--FB Login Button-->
 	<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
