--- a/html/login.html
+++ b/html/login.html
@@ -80,7 +80,7 @@
     });
   }
 </script>
-<form id="login_form" action="users/login" method="POST"
+<form name="login_form" id="login_form" action="users/login" method="POST"
 onsubmit="return validate_login(event);">
 	<label>Email: 
 	<input type="text" name="email" size="30">*required
