--- a/html/signup.html
+++ b/html/signup.html
@@ -1,6 +1,7 @@
 <!--Signup form-->
 <div class="error" id="error"></div>
-<form name="signup" id="signup" onsubmit="return validate_signup();">
+<form name="signup" id="signup" action="users/signup" method="POST"
+onsubmit="return validate_signup();">
 	<label>Name:
 	<input type="text" name="name" size="20" maxlength="20" onkeyup="checkName(this.value);">*required
 	</label><span id="checkName"></span><br/>
