--- a/html/signup.html
+++ b/html/signup.html
@@ -3,20 +3,20 @@
 <form name="signup" id="signup" action="users/signup" method="POST"
 onsubmit="return validate_signup();">
 	<label>Name:
-	<input type="text" name="name" size="20" maxlength="20" onkeyup="checkName(this.value);">*required
+	<input type="text" name="name" size="20" maxlength="20" placeholder="Your name" onkeyup="checkName(this.value);">*required
 	</label><span id="checkName"></span><br/>
 
 	<label>Email:
-	<input type="text" name="email" size="30" onkeyup="checkEmail(this.value);">*required
+	<input type="text" name="email" size="30" placeholder="email@example.com" onkeyup="checkEmail(this.value);">*required
 	</label><span id="checkEmail"></span><br/>
 
 	<label>Password:
-	<input type="password" name="passwd" size="10" maxlength="10">*required(Strictly 10 alphanumberic characters)
-	</label><br/>
+	<input type="password" name="passwd" size="20" placeholder="Use only alphanumeric characters" onkeyup="checkPassword(this.value);">*required
+	</label><span id="checkPassword"></span><br/>
 
 	<label>Re-type password:
-	<input type="password" name="re-passwd" size="10" maxlength="10">*required(Must match the previously entered password)
-	</label><br/>
+	<input type="password" name="re-passwd" size="20" placeholder="Must match password field" onkeyup="confirmPassword(this.value);">*required
+	</label><span id="confirmPassword"></span><br/>
 
 	<input type="submit" name="submit" value="Sign Up">
 </form>
