--- a/html/reset_password.html
+++ b/html/reset_password.html
@@ -1,14 +1,13 @@
 <!--Form for users wh forgot their passwords-->
 <p>An email with the new password will be sent to the email address
 provided in the form below.</p>
-<div class="error" id="error"><div>
-<form name="reset_password" action="users.php?action=reset_password" method="POST">
+<div class="error" id="error"></div>
+<form name="reset_password" id="reset_password" action="users/reset_password" method="POST" onsubmit="return reset_passwd(event);">
 	<label>Username:
 	<input type="text" name="name" size="30">
 	</label><br/>
 	<label>Email:
-	<input type="text" name="email" size="30">
-	</label><br/>
-
-	<input type="submit" name="submit" value="Send">
+	<input type="text" name="email" size="30" onkeyup="validate_email(this.value);">
+	</label><span id="checkEmail"></span><br/>
+	<input type="submit" name="submit_button" value="Send">
 </form>
