Modifies confirmPassword function in jscript for use in other forms

--- a/html/change_passwd.html
+++ b/html/change_passwd.html
@@ -3,7 +3,7 @@
 <form name="change_passwd" action="users/changepassword" method="POST"
 onsubmit="return change_password(event);">
 <label>Current Password:
-<input type="password" name="old_passwd" size="20" placeholder="Your current password">
+<input type="password" name="oldpasswd" size="20" placeholder="Your current password">
 </label><br/>
 <label>New Password:
 <input type="password" name="passwd" size="20" placeholder="New alphanumeric password" onkeyup="checkPassword(this.value);">
