Rectifies CSS and Javascript not loading when admin views entries list

--- a/html/template.html
+++ b/html/template.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 	<title>{{title}}-Relive That Moment</title>
-	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-	<script type="text/javascript" src = javascripts/jscript.js></script>
+	<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+	<script type="text/javascript" src ="/javascripts/jscript.js"></script>
 </head>
 
 <body>
