Merges progress from mvc_temp

--- a/html/change_passwd.html
+++ b/html/change_passwd.html
@@ -1,14 +1,15 @@
 <!--Form to change password-->
-{{message}}
-<form name="change_passwd" action="users.php?action=changepasswd" method="POST">
+<div class="error" id="error"></div>
+<form name="change_passwd" action="users/changepassword" method="POST"
+onsubmit="return change_password(event);">
 <label>Current Password:
-<input type="password" name="old_passwd" size="10" maxlength="10">
+<input type="password" name="oldpasswd" size="20" placeholder="Your current password">
 </label><br/>
 <label>New Password:
-<input type="password" name="new_passwd" size="10" maxlength="10">
-</label><br/>
+<input type="password" name="passwd" size="20" placeholder="New alphanumeric password" onkeyup="checkPassword(this.value);">
+</label><span id="checkPassword"></span><br/>
 <label>Re-enter New Password:
-<input type="password" name="re-new_passwd" size="10" maxlength="10">
-</label><br/>
+<input type="password" name="passwd2" size="20" placeholder="Re-type new password" onkeyup="confirmPassword(this.value);">
+</label><span id="confirmPassword"></span><br/>
 <input type="submit" name="submit" value="Change Password">
 </form>
