--- a/html/home.html
+++ b/html/home.html
@@ -1,16 +1,13 @@
 <!--Contents for home page for typical user-->
 <p>Do you have photos of any significant life events that you
 do not wish to forget? Or do you want to share these life events
-with your friends? Then you have come to the right place! Relive That Moment
+with your friends? Then you have come to the right place! XXX
 will help you get it done within a few minutes.
 </p>
-
-<p>Want to maintain a collection of your memories in the cloud? Sign up for an
-account to be able to do so.</p>
 
 <h2>New to this site?</h2>
 <!--Insert image button link to guided process-->
 
 <h2>I've done this before</h2>
 <!--Insert image button link to the standard form-->
-<p style="text-align: center;"><a href="index.php?page=create_entry">Let's Get Started!</a></p>
+<p style="text-align: center;"><a href="/create_entry">Let's Get Started!</a></p>
