--- a/html/signedup.html
+++ b/html/signedup.html
@@ -1,2 +1,2 @@
 <!--Message for users who completed the signup process-->
-<p>Thank you for signing up. Please check your email for the activation link. If you do not receive an email, please contact the site administrator regarding your account.</p>
+<p>Thank you for signing up. Please check your email for the link to activate your account.</p>
