--- a/html/template.html
+++ b/html/template.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 	<title>{{title}}-Relive That Moment</title>
-	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-	<script type="text/javascript" src="javascripts/jscript.js"></script>
+	<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+	<script type="text/javascript" src ="/javascripts/jscript.js"></script>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 	<nav>
 		<ul id="navbar">
 			<li><a href="/">Home</a></li>
-			<li><a href="index.php?page=about">About</a></li>
+			<li><a href="/about">About</a></li>
 			{{usrmenu}}
 		</ul>
 	</nav>
@@ -26,8 +26,7 @@
 	</div>
 
 	<div id="footer">
-		Created by: Qua Zi Xian and Tang Yulong on XX July 2014<br/>
-		Hosted on: <a href="https://www.heroku.com">Heroku</a>
+		Created by: Qua Zi Xian and Tang Yulong on XX July 2014
 	</div>
 </body>
 </html>
