Attempts to fix ajax request not being sent for some functions

--- a/html/reset_password.html
+++ b/html/reset_password.html
@@ -2,7 +2,7 @@
 <p>An email with the new password will be sent to the email address
 provided in the form below.</p>
 <div class="error" id="error"></div>
-<form name="reset_password" id="reset_password" action="users/reset_password" method="POST" onsubmit="return reset_passwd(event);">
+<form name="reset_password" id="reset_password" action="users/reset_password" method="POST" onsubmit="reset_passwd(event);">
 	<label>Username:
 	<input type="text" name="name" size="30">
 	</label><br/>
