Changes link text to entry form

--- a/html/home.html
+++ b/html/home.html
@@ -10,4 +10,4 @@ will help you get it done within a few minutes.
 
 <h2>I've done this before</h2>
 <!--Insert image button link to the standard form-->
-<p style="text-align: center;"><a href="/create_entry">Let's Get Started!</a></p>
+<p style="text-align: center;"><a href="/create_entry">Create an Entry</a></p>
