Adds privacy notice to signup page

--- a/html/signup.html
+++ b/html/signup.html
@@ -1,4 +1,6 @@
 <!--Signup form-->
+<div class="message" id="message">Before you sign up, please take note that the
+admin is able to view all the entries archived as collection on this application. This only applies to entries created by logged in users.</div>
 <div class="error" id="error"></div>
 <form name="signup" id="signup" action="users/signup" method="POST"
 onsubmit="return validate_signup();">
