Redesigns title and menu bars with Bootstrap

--- a/html/template.html
+++ b/html/template.html
@@ -4,21 +4,26 @@
 <head>
 	<title>{{title}}-Relive That Moment</title>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
-	<script type="text/javascript" src ="/javascripts/jscript.js"></script>
+	<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="/javascripts/jscript.js"></script>
+	<script type="text/javascript" src="/javascripts/bootstrap.js"></script>
 </head>
 
 <body>
 	<div id="header">
 		<h1>Relive That Moment</h1>
+		<div class="dropdown">
+			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">Menu
+			<span class="caret"></span>
+			</button>
+			<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+				<li role="presentation"><a role="menuitem" tabindex="-1" href="/">Home</a></li>
+				<li role="presentation"><a role="menuitem" tabindex="-1" href="/about">About</a></li>
+				{{usrmenu}}
+			</ul>
+		</div>
 	</div>
-
-	<nav>
-		<ul id="navbar">
-			<li><a href="/">Home</a></li>
-			<li><a href="/about">About</a></li>
-			{{usrmenu}}
-		</ul>
-	</nav>
 
 	<!--The main content of the page-->
 	<div id="content">
