--- a/html/loggedinmenu.html
+++ b/html/loggedinmenu.html
@@ -1,4 +1,4 @@
 <!--Menu links for logged in users only-->
-<li><a href="/create_entry">Create Entry</a></li>
-<li><a href="/change_passwd">Change Password</a><li>
-<li><a href="/users/logout">Logout</a></li>
+<li role="presentation"><a role="menuitem" tabindex="-1" href="/create_entry">Create Entry</a></li>
+<li role="presentation"><a role="menuitem" tabindex="-1" href="/change_passwd">Change Password</a><li>
+<li role="presentation"><a role="menuitem" tabindex="-1" href="/users/logout">Logout</a></li>
