--- a/html/loggedoutmenu.html
+++ b/html/loggedoutmenu.html
@@ -1,3 +1,3 @@
 <!--Menu links for logged out users-->
-<li><a href="/signup">Sign Up</a></li>
-<li><a href="/login">Login</a></li>
+<li role="presentation"><a role="menuitem" tabindex="-1" href="/signup">Sign Up</a></li>
+<li role="presentation"><a role="menuitem" tabindex="-1" href="/login">Login</a></li>
