Adds changes from temp branch

--- a/html/admin_menu.html
+++ b/html/admin_menu.html
@@ -1,3 +1,3 @@
 <!--Menu bar content for admin user-->
-<li><a href="/change_passwd">Change Password</a></li>
-<li><a href="/users/logout">Logout</a></li>
+<li role="presentation"><a role="menuitem" tabindex="-1" href="/change_passwd">Change Password</a></li>
+<li role="presentation"><a role="menuitem" tabindex="-1" href="/users/logout">Logout</a></li>
