--- a/html/signup.html
+++ b/html/signup.html
@@ -5,19 +5,19 @@ admin is able to view all the entries archived as collection on this application
 <form name="signup" id="signup" action="users/signup" method="POST"
 onsubmit="return validate_signup();">
 	<label>Name:
-	<input type="text" name="name" size="20" maxlength="20" placeholder="Your name" onkeyup="checkName(this.value);">*required
+	<input type="text" name="name" size="20" maxlength="20" placeholder="Your name" onkeyup="checkName(this.value);">
 	</label><span id="checkName"></span><br/>
 
 	<label>Email:
-	<input type="text" name="email" size="30" placeholder="email@example.com" onkeyup="checkEmail(this.value);">*required
+	<input type="text" name="email" size="30" placeholder="email@example.com" onkeyup="checkEmail(this.value);">
 	</label><span id="checkEmail"></span><br/>
 
 	<label>Password:
-	<input type="password" name="passwd" size="20" placeholder="Use only alphanumeric characters" onkeyup="checkPassword(this.value);">*required
+	<input type="password" name="passwd" size="20" placeholder="Use only alphanumeric characters" onkeyup="checkPassword(this.value);">
 	</label><span id="checkPassword"></span><br/>
 
 	<label>Re-type password:
-	<input type="password" name="re-passwd" size="20" placeholder="Must match password field" onkeyup="confirmPassword(this.value);">*required
+	<input type="password" name="re-passwd" size="20" placeholder="Must match password field" onkeyup="confirmPassword(this.value);">
 	</label><span id="confirmPassword"></span><br/>
 
 	<input type="submit" name="submit" value="Sign Up">
