--- a/html/create_entry.html
+++ b/html/create_entry.html
@@ -19,14 +19,14 @@ created using this application.</div>
 	<!--Image preview-->
 	<img id="preview" src="#" width="300" height="300" alt="No preview available"><br/>
 	
-	<label>Author:
+	<label>Author:</label>
 	{{author}}
-	</label><br/>
+	<br/>
 
 	<!--Title field-->
-	<label>Title:
+	<label>Title:</label>
 	<input type="text" name="title" size="30" placeholder="Enter a title">*required
-	</label><br/>
+	<br/>
 
 	<!--Story field-->
 	<label>Story:</label>
