--- a/html/login.html
+++ b/html/login.html
@@ -82,13 +82,13 @@
 </script>
 <form name="login_form" id="login_form" action="users/login" method="POST"
 onsubmit="return validate_login(event);">
-	<label>Email: 
+	<label>Email:</label>
 	<input type="text" name="email" size="30">*required
-	</label><br/>
+	<br/>
 
-	<label>Password: 
+	<label>Password:</label>
 	<input type="password" name="passwd" size="10" maxlength="10">*required
-	</label><br/>
+	<br/>
 
 	<!--Fill the href section with the appropriate request
 	    to send to script-->
