Attempts to vertically align file upload with label

--- a/html/create_entry.html
+++ b/html/create_entry.html
@@ -9,7 +9,7 @@ created using this application.</div>
 <form name="new_entry" action="upload_handler/submit" method="post" id="entry" onsubmit="validate_entry(event);" enctype="multipart/form-data">
 
 	<!--Image file upload field-->
-	<label for="file">Image File:</label>
+	<label>Image File:</label>
 	<!--readURL() function to be implemented. Complicated.-->
 	<input type="file" name="img" id="file"
 	accept="image/gif, image/jpeg, image/png"
