Makes more changes to styling of forms

--- a/html/create_entry.html
+++ b/html/create_entry.html
@@ -13,7 +13,7 @@ created using this application.</div>
 	<!--readURL() function to be implemented. Complicated.-->
 	<input type="file" name="img" id="file"
 	accept="image/gif, image/jpeg, image/png"
-	onchange="previewImage();">*required<span id="checkFile"></span><br/>
+	onchange="previewImage();"><span id="checkFile"></span><br/>
 
 	<!--Handle the preview issue at a later stage-->
 	<!--Image preview-->
@@ -25,12 +25,12 @@ created using this application.</div>
 
 	<!--Title field-->
 	<label>Title:</label>
-	<input type="text" name="title" size="30" placeholder="Enter a title">*required
+	<input type="text" name="title" size="30" placeholder="Enter a title">
 	<br/>
 
 	<!--Story field-->
 	<label>Story:</label>
-	<textarea name="story" rows="20" cols="50" form="entry" placeholder="Write your story here..."></textarea>*required<br/>
+	<textarea name="story" rows="20" cols="50" form="entry" placeholder="Write your story here..."></textarea><br/>
 
 	<!--Submit button-->
 	<input type="submit" name="submit_button" value="Submit">
