--- a/html/reset_password.html
+++ b/html/reset_password.html
@@ -3,11 +3,9 @@
 provided in the form below.</p>
 <div class="error" id="error"></div>
 <form name="reset_password" id="reset_password" action="users/reset_password" method="POST" onsubmit="return reset_passwd(event);">
-	<label>Username:
-	<input type="text" name="name" size="30">
-	</label><br/>
-	<label>Email:
-	<input type="text" name="email" size="30" onkeyup="validate_email(this.value);">
-	</label><span id="checkEmail"></span><br/>
+	<label>Username:</label>
+	<input type="text" name="name" size="30"><br/>
+	<label>Email:</label>
+	<input type="text" name="email" size="30" onkeyup="validate_email(this.value);"><span id="checkEmail"></span><br/>
 	<input type="submit" name="submit_button" value="Send">
 </form>
