--- a/html/template.html
+++ b/html/template.html
@@ -2,6 +2,7 @@
 <!--Template HTML code for ALL pages-->
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{title}}-Relive That Moment</title>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.css">
