Continues attempt from previous commit

--- a/html/signup.html
+++ b/html/signup.html
@@ -20,5 +20,5 @@ onsubmit="return validate_signup();">
 	<input type="password" name="re-passwd" size="20" placeholder="Must match password field" onkeyup="confirmPassword(this.value);">
 	<span id="confirmPassword"></span><br/>
 
-	<input type="submit" name="submit" value="Sign Up" style="margin: 5px auto 5px;">
+	<input type="submit" name="submit" value="Sign Up" style="margin-left: auto; margin-right: auto;">
 </form>
