--- a/html/signup.html
+++ b/html/signup.html
@@ -20,5 +20,5 @@ onsubmit="return validate_signup();">
 	<input type="password" name="re-passwd" size="20" placeholder="Must match password field" onkeyup="confirmPassword(this.value);">
 	<span id="confirmPassword"></span><br/>
 
-	<input type="submit" name="submit" value="Sign Up" style="display: block; margin-left: auto; margin-right: auto;">
+	<input type="submit" class="button" name="submit" value="Sign Up">
 </form>
