--- a/html/login.html
+++ b/html/login.html
@@ -87,7 +87,7 @@ onsubmit="return validate_login(event);">
 	<br/>
 
 	<label>Password:</label>
-	<input type="password" name="passwd" size="10" maxlength="10">
+	<input type="password" name="passwd" size="20">
 	<br/>
 
 	<!--Fill the href section with the appropriate request
