background colour change and edited about.html

--- a/html/template.html
+++ b/html/template.html
@@ -32,7 +32,7 @@
 	</div>
 
 	<div id="footer">
-		Created by: Qua Zi Xian and Tang Yulong on XX July 2014
+		Created by: Qua Zi Xian and Tang Yu Long on XX July 2014
 	</div>
 </body>
 </html>
