--- a/html/home.html
+++ b/html/home.html
@@ -7,6 +7,7 @@ will help you get it done within a few minutes.
 
 <h2>New to this site?</h2>
 <!--Insert image button link to guided process-->
+<p style="text-align: center;"><a href="/user_guide"><button type="button">User Guide</button></a></p>
 
 <h2>I've done this before</h2>
 <!--Insert image button link to the standard form-->
