--- a/html/template.html
+++ b/html/template.html
@@ -49,8 +49,8 @@
 	</div>
 
 	<div id="footer">
-	<!--Facebook Like and Share button-->
-	<div class="fb-like" data-href="http://relivethatmoment.herokuapp.com/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+		<!--Facebook Like and Share button-->
+		<div class="fb-like" data-href="http://relivethatmoment.herokuapp.com/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div><br/>
 		Created by: Qua Zi Xian and Tang Yu Long on XX July 2014
 	</div>
 	
