--- a/html/user_guide.html
+++ b/html/user_guide.html
@@ -11,7 +11,7 @@ create a keepsake simply by filling in all the fields! It's that simple!
 <h3>Registering as a User</h3>
 When you sign up with us, we provide online storage of the keepsakes you created
 with us. Simply navigate to the "Sign Up" link at the drop box located at the top
-of the site, and register with us today!
+of the site, and register with us today! Note that entries created is stored on our storage only if you are logged in.
 
 <h3>Logging in with Facebook</h3>
 If you choose to login using Facebook, you can do so by immediately logging in as a
