Minor change in template.html

--- a/html/template.html
+++ b/html/template.html
@@ -6,7 +6,8 @@
         FB.init({
           appId      : '823148504363911',
           xfbml      : true,
-          version    : 'v2.0'
+          version    : 'v2.0',
+	  cookie     : true
         });
       };
 
