--- a/html/login.html
+++ b/html/login.html
@@ -11,8 +11,8 @@
     // for FB.getLoginStatus().
     if (response.status === 'connected') {
       // Logged into your app and Facebook.
-      testAPI();
-	//fb_login();
+      //testAPI();
+      fb_login();
     } else if (response.status === 'not_authorized') {
       // The person is logged into Facebook, but not your app.
       document.getElementById('status').innerHTML = 'Please log ' +
@@ -98,6 +98,7 @@ onsubmit="return validate_login(event);">
 	<input type="submit" name="submit_button" value="Login">
 	
 	<!--FB Login Button-->
+	<button type="button" onclick="fb_login();">Sign in with Facebook</button>
 	<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
 	</fb:login-button>
 	
