--- a/html/login.html
+++ b/html/login.html
@@ -11,8 +11,8 @@
     // for FB.getLoginStatus().
     if (response.status === 'connected') {
       // Logged into your app and Facebook.
-      //testAPI();
-      fb_login();
+      testAPI();
+      //fb_login();
     } else if (response.status === 'not_authorized') {
       // The person is logged into Facebook, but not your app.
       document.getElementById('status').innerHTML = 'Please log ' +
