--- a/html/user_guide.html
+++ b/html/user_guide.html
@@ -11,11 +11,10 @@ create a keepsake simply by filling in all the fields! It's that simple!
 <h3>Registering as a User</h3>
 When you sign up with us, we provide online storage of the keepsakes you created
 with us. Simply navigate to the "Sign Up" link at the drop box located at the top
-of the site, and register with us today! Note that entries created is stored on our storage only if you are logged in.
+of the site, and register with us today! Note that entries created is stored on 
+our storage only if you are logged in.
 
-<h3>Logging in with Facebook</h3>
-If you choose to login using Facebook, you can do so by immediately logging in as a
-user by navigating to the "Login" link at the drop box located at the top of the 
-site, and click on the Facebook Login button provided there! You will be provided with
-the same services of online storage as our registered users mentioned above.
+<h3>Like and Share on Facebook!</h3>
+Do like and share Relive That Moment on Facebook! These buttons are located at
+the bottom of page. So let them know and create more memories to be kept!
 </p>
