Slight adjustment to signup.html

--- a/html/signup.html
+++ b/html/signup.html
@@ -9,7 +9,7 @@ onsubmit="return validate_signup();">
 	<span id="checkName"></span><br/>
 
 	<label>Email:</label>
-	<input type="text" name="email" size="30" placeholder="email@example.com" onkeyup="checkEmail(this.value);">
+	<input type="text" name="email" size="30" maxlength="50" placeholder="email@example.com" onkeyup="checkEmail(this.value);">
 	<span id="checkEmail"></span><br/>
 
 	<label>Password:</label>
