Resizes password field in login.html

--- a/html/login.html
+++ b/html/login.html
@@ -87,7 +87,7 @@ onsubmit="return validate_login(event);">
 	<input type="text" name="email" size="30"><br/>
 
 	<label>Password:</label>
-	<input type="password" name="passwd" size="10" maxlength="10"><br/>
+	<input type="password" name="passwd" size="30"><br/>
 
 	<!--Fill the href section with the appropriate request
 	    to send to script-->
