--- a/html/template.html
+++ b/html/template.html
@@ -31,7 +31,18 @@
 
 <body>
 	<div id="header">
-		<h1>Relive That Moment</h1>
+		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="/"><b>Relive That Moment</b></a>
+				</div>
+
+				<ul class="nav navbar-nav">
+					<li><a href="/about">About</a></li>
+				</ul>
+			</div>
+		</nav>
+		<!--<h1>Relive That Moment</h1>
 		<div class="dropdown">
 			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">Menu
 			<span class="caret"></span>
@@ -41,7 +52,7 @@
 				<li role="presentation"><a role="menuitem" tabindex="-1" href="/about">About</a></li>
 				{{usrmenu}}
 			</ul>
-		</div>
+		</div>-->
 	</div>
 
 	<!--The main content of the page-->
