--- a/html/home.html
+++ b/html/home.html
@@ -1,13 +1,14 @@
 <!--Contents for home page for typical user-->
 <p>Do you have photos of any significant life events that you
 do not wish to forget? Or do you want to share these life events
-with your friends? Then you have come to the right place! XXX
+with your friends? Then you have come to the right place! Relive That Moment
 will help you get it done within a few minutes.
 </p>
 
 <h2>New to this site?</h2>
 <!--Insert image button link to guided process-->
+<p style="text-align: center;"><a href="/user_guide"><button type="button">User Guide</button></a></p>
 
 <h2>I've done this before</h2>
 <!--Insert image button link to the standard form-->
-<p style="text-align: center;"><a href="/create_entry">Let's Get Started!</a></p>
+<p style="text-align: center;"><a href="/create_entry"><button type="button">Create an Entry</button></a></p>
