Adds back more links to navigation bar

--- a/html/template.html
+++ b/html/template.html
@@ -39,6 +39,8 @@
 
 				<ul class="nav navbar-nav">
 					<li><a href="/about">About</a></li>
+					<li><a href="/user_guide">User Guide</a></li>
+					{{usrmenu}}
 				</ul>
 			</div>
 		</nav>
