--- a/html/login.html
+++ b/html/login.html
@@ -83,13 +83,11 @@
 </script>
 <form name="login_form" id="login_form" action="users/login" method="POST"
 onsubmit="return validate_login(event);">
-	<label>Email: 
-	<input type="text" name="email" size="30">*required
-	</label><br/>
+	<label>Email:</label> 
+	<input type="text" name="email" size="30"><br/>
 
-	<label>Password: 
-	<input type="password" name="passwd" size="10" maxlength="10">*required
-	</label><br/>
+	<label>Password:</label>
+	<input type="password" name="passwd" size="10" maxlength="10"><br/>
 
 	<!--Fill the href section with the appropriate request
 	    to send to script-->
