--- a/html/signup.html
+++ b/html/signup.html
@@ -3,20 +3,16 @@
 <form name="signup" id="signup" action="users/signup" method="POST"
 onsubmit="return validate_signup();">
 	<label>Name:</label>
-	<input type="text" name="name" size="20" maxlength="20" placeholder="Your name" onkeyup="checkName(this.value);">*required
-	<span id="checkName"></span><br/>
+	<input type="text" name="name" size="20" maxlength="20" placeholder="Your name" onkeyup="checkName(this.value);"><span id="checkName"></span><br/>
 
 	<label>Email:</label>
-	<input type="text" name="email" size="30" placeholder="email@example.com" onkeyup="checkEmail(this.value);">*required
-	<span id="checkEmail"></span><br/>
+	<input type="text" name="email" size="30" placeholder="email@example.com" onkeyup="checkEmail(this.value);"><span id="checkEmail"></span><br/>
 
 	<label>Password:</label>
-	<input type="password" name="passwd" size="20" placeholder="Use only alphanumeric characters" onkeyup="checkPassword(this.value);">*required
-	<span id="checkPassword"></span><br/>
+	<input type="password" name="passwd" size="20" placeholder="Use only alphanumeric characters" onkeyup="checkPassword(this.value);"><span id="checkPassword"></span><br/>
 
 	<label>Re-type password:</label>
-	<input type="password" name="re-passwd" size="20" placeholder="Must match password field" onkeyup="confirmPassword(this.value);">*required
-	<span id="confirmPassword"></span><br/>
+	<input type="password" name="re-passwd" size="20" placeholder="Must match password field" onkeyup="confirmPassword(this.value);"><span id="confirmPassword"></span><br/>
 
 	<input type="submit" name="submit" value="Sign Up">
 </form>
