--- a/html/template.html
+++ b/html/template.html
@@ -31,7 +31,7 @@
 
 <body>
 	<div id="header">
-		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<nav class="navbar navbar-default" role="navigation">
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<a class="navbar-brand" href="/"><b>Relive That Moment</b></a>
@@ -44,17 +44,6 @@
 				</ul>
 			</div>
 		</nav>
-		<!--<h1>Relive That Moment</h1>
-		<div class="dropdown">
-			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">Menu
-			<span class="caret"></span>
-			</button>
-			<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-				<li role="presentation"><a role="menuitem" tabindex="-1" href="/">Home</a></li>
-				<li role="presentation"><a role="menuitem" tabindex="-1" href="/about">About</a></li>
-				{{usrmenu}}
-			</ul>
-		</div>-->
 	</div>
 
 	<!--The main content of the page-->
