Changes design for some of the pages' contents

--- a/html/create_entry.html
+++ b/html/create_entry.html
@@ -15,14 +15,13 @@
 	<!--Image preview-->
 	<img id="preview" src="#" width="300" height="300" alt="No preview available"><br/>
 	
-	<label>Author:
+	<label>Author:</label>
 	{{author}}
-	</label><br/>
+	<br/>
 
 	<!--Title field-->
-	<label>Title:
-	<input type="text" name="title" size="30" placeholder="Enter a title">*required
-	</label><br/>
+	<label>Title:</label>
+	<input type="text" name="title" size="30" placeholder="Enter a title"><br/>
 
 	<!--Story field-->
 	<label>Story:</label>
@@ -30,5 +29,4 @@
 
 	<!--Submit button-->
 	<input type="submit" name="submit_button" value="Submit">
-	</label>
 </form>
