--- a/html/loggedoutmenu.html
+++ b/html/loggedoutmenu.html
@@ -1,3 +1,4 @@
 <!--Menu links for logged out users-->
+<li><a href="/create_entry">Create Entry</a></li>
 <li><a href="/signup">Sign Up</a></li>
 <li><a href="/login">Login</a></li>
