Adds heading to home.html

--- a/html/home.html
+++ b/html/home.html
@@ -1,5 +1,6 @@
 <!--Contents for home page for typical user-->
 <div class="jumbotron">
+<h2>Add memories to your photos</h2>
 <p>Do you have photos of any significant life events that you
 do not wish to forget? Or do you want to share these life events
 with your friends? Then you have come to the right place! Relive That Moment
