--- a/html/template.html
+++ b/html/template.html
@@ -34,14 +34,17 @@
 		<nav class="navbar navbar-default" role="navigation">
 			<div class="container-fluid">
 				<div class="navbar-header">
+					<span class="sr-only">Toggle only</span>
 					<a class="navbar-brand" href="/"><b>Relive That Moment</b></a>
 				</div>
 
-				<ul class="nav navbar-nav">
-					<li><a href="/about">About</a></li>
-					<li><a href="/user_guide">User Guide</a></li>
-					{{usrmenu}}
-				</ul>
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li><a href="/about">About</a></li>
+						<li><a href="/user_guide">User Guide</a></li>
+						{{usrmenu}}
+					</ul>
+				</div>
 			</div>
 		</nav>
 	</div>
