--- a/html/template.html
+++ b/html/template.html
@@ -30,22 +30,22 @@
 </head>
 
 <body>
-		<nav class="navbar navbar-default" role="navigation">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<span class="sr-only">Toggle only</span>
-					<a class="navbar-brand" href="/"><b>Relive That Moment</b></a>
-				</div>
-
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li><a href="/about">About</a></li>
-						<li><a href="/user_guide">User Guide</a></li>
-						{{usrmenu}}
-					</ul>
-				</div>
+	<nav class="navbar navbar-default" role="navigation">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<a class="navbar-brand" href="/"><b>Relive That Moment</b></a>
 			</div>
-		</nav>
+
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li><a href="/about">About</a></li>
+					<li><a href="/user_guide">User Guide</a></li>
+					{{usrmenu}}
+				</ul>
+			</div>
+		</div>
+	</nav>
 
 	<!--The main content of the page-->
 	<div id="content">
