--- a/html/template.html
+++ b/html/template.html
@@ -33,7 +33,7 @@
 	<nav class="navbar navbar-default" role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"></button>
 				<a class="navbar-brand" href="/"><b>Relive That Moment</b></a>
 			</div>
 
