--- a/html/template.html
+++ b/html/template.html
@@ -30,21 +30,27 @@
 </head>
 
 <body>
-	<div id="header">
-		<nav class="navbar navbar-default" role="navigation">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<a class="navbar-brand" href="/"><b>Relive That Moment</b></a>
-				</div>
+	<nav class="navbar navbar-default" role="navigation">
+		<div class="container-fluid">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<div class="navbar-header">
+				<a class="navbar-brand" href="/"><b>Relive That Moment</b></a>
+			</div>
 
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li><a href="/about">About</a></li>
 					<li><a href="/user_guide">User Guide</a></li>
 					{{usrmenu}}
 				</ul>
 			</div>
-		</nav>
-	</div>
+		</div>
+	</nav>
 
 	<!--The main content of the page-->
 	<div id="content">
